# gamatrix

./: .dockerignore  .env-sample  .flake8  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  config-sample-windows.yaml  config-sample.yaml  constants.py  dev-requirements.txt  docker-compose.yml  gamatrix-gog.py  gamatrix.py  justfile  pyproject.toml  requirements.txt  setup.cfg  test_cmdline.py  test_gogdb.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  version.yml
gamatrix/: __main__.py
gamatrix_gog/: __main__.py
helpers/: cache_helper.py  constants.py  gogdb_helper.py  igdb_helper.py  misc_helper.py  network_helper.py
infrastructure/cdk/: README.md  app.py  cdk.json  config.py  gamatrix_stack.py
lambdas/db_parser/: handler.py
lambdas/igdb_enricher/: handler.py
scripts/: backfill_slugs.py  init_local.py  local_worker.py  migrate_cache.py  migrate_metadata.py  seed_sample_data.py  seed_users.py  test_path.py
scripts/sample_data/: generate_fixtures.py  sample_user1.db  sample_user2.db  sample_user3.db  seed_manifest.json
src/: __main__.py
src/gamatrix/: __init__.py  __main__.py  app.py  config.py  constants.py  helpers.py  images.py  jobs.py  lambda_handler.py  preferences.py  templating.py  upload.py  ux_templates.py
src/gamatrix/auth/: __init__.py  dependencies.py  passkeys.py  routes.py  service.py  tokens.py
src/gamatrix/games/: __init__.py  api.py  preferences.py  routes.py  service.py  web.py
src/gamatrix/gogdb/: __init__.py  ingest.py  parser.py
src/gamatrix/helpers/: constants.py  gogdb_helper.py  igdb_helper.py
src/gamatrix/igdb/: __init__.py  client.py  enricher.py
src/gamatrix/static/: games_sort.js  passkeys.js  style.css  toggle_all.js  upload-gamatrix.ps1  upload-gamatrix.sh
src/gamatrix/static/templates/default/: style.css
src/gamatrix/static/templates/modern/: style.css
src/gamatrix/storage/: __init__.py  dynamo.py  queue.py  s3.py
src/gamatrix/templates/: base.html.jinja  forgot_password.html.jinja  game_grid.html.jinja  games.html.jinja  games_table.html.jinja  job_status.html.jinja  login.html.jinja  passkey_delete_form.html.jinja  passkeys.html.jinja  passkeys_manage_list.html.jinja  preferences.html.jinja  reset_password.html.jinja  tokens.html.jinja  tokens_list.html.jinja  upload.html.jinja
src/gamatrix/templates/default/: base.html.jinja  games.html.jinja  games_table.html.jinja  passkeys.html.jinja  passkeys_list.html.jinja  preferences.html.jinja
src/gamatrix/templates/modern/: base.html.jinja  games.html.jinja  games_table.html.jinja  passkeys.html.jinja  preferences.html.jinja  tokens.html.jinja
src/gamatrix_gog/: __main__.py
src/gamatrix_gog/helpers/: gogdb_helper.py  igdb_helper.py
static/: package.json  webpack.config.js
templates/: game_grid.html  game_list.html  game_list.html.jinja  index.html  index.html.jinja  upload_status.html
test/: sample_db.sqlite3  test_cmdline.py  test_gogdb.py
tests/: conftest.py  test_auth.py  test_cdk_config.py  test_cdk_passkeys.py  test_config.py  test_games.py  test_generate_fixtures.py  test_gogdb.py  test_helpers.py  test_igdb.py  test_images.py  test_jobs.py  test_localdev_scripts.py  test_network_helper.py  test_passkeys.py  test_preferences.py  test_refresh_igdb.py  test_repository_cache.py  test_routes.py  test_s3.py  test_seed_sample_data.py  test_templates.py  test_tokens.py
