[project]
name = "gamatrix-gog"
version = "1.0.0"
authors = [
    {name = "Erik Niklas", email = "github@bobanddoug.com"},
    {name = "Derek Keeler", email = "34773432+derek-keeler@users.noreply.github.com"},
    {name = "Klosteinmann", email = "34807323+klosteinmann@users.noreply.github.com"},
]
description = "A tool to compare the games owned by several users, and list all the games they have in common. It requires all users to use [GOG Galaxy](https://www.gog.com/galaxy); since GOG Galaxy supports almost all major digital distribution platforms."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "docopt==0.6.2",
    "Flask==1.1.2",
    "Jinja2==2.11.2",
    "MarkupSafe==1.1.1",
    "pyyaml==5.3.1",
    "requests==2.25.1",
    "ruamel.yaml==0.16.12",
    "ruamel.yaml.clib==0.2.2",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov",
]
