[project]
name = "gamatrix"
dynamic = ["version"]
authors = [
    {name = "Erik Niklas", email = "github@bobanddoug.com"},
    {name = "Derek Keeler", email = "34773432+derek-keeler@users.noreply.github.com"},
    {name = "Klosteinmann", email = "34807323+klosteinmann@users.noreply.github.com"},
]
description = """A tool to compare the games owned by several users, and list
                 all the games they have in common. It requires all users to
                 use GOG Galaxy, since GOG Galaxy supports almost all major
                 digital distribution platforms."""
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi==0.115.6",
    "mangum==0.19.0",
    "uvicorn[standard]==0.34.0",
    "jinja2==3.1.5",
    "python-multipart==0.0.20",
    "boto3==1.35.92",
    "httpx==0.28.1",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.2.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "rapidfuzz==3.11.0",
    "itsdangerous==2.2.0",
]

[project.optional-dependencies]
# Local development and testing.
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "moto[dynamodb,s3,sqs,ses]",
    "boto3-stubs[dynamodb,s3,sqs,ses]",
    "types-python-jose",
]
# CI build tooling.
ci = [
    "build",
]
# Infrastructure-as-code (CDK).
cdk = [
    "aws-cdk-lib==2.173.4",
    "constructs>=10.0.0,<11.0.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

# Version is derived from the latest git tag (see .github/workflows/version.yml).
# In the Docker/CDK builds the git history is unavailable, so the version is
# injected via the SETUPTOOLS_SCM_PRETEND_VERSION build arg instead.
[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gamatrix.templates" = ["*.jinja"]
"gamatrix.static" = ["*.png", "*.jpg", "*.css"]
"gamatrix.static.profile_img" = ["*.png", "*.jpg"]

[tool.mypy]
files = "src"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--cov=gamatrix --cov-branch"
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
target-version = ["py312"]
